# backend/src/TodoApi.Todos/Models/TodoModel.cs
@@ -1,0 +1,12 @@
+namespace TodoApi.Todos.Models;
+
+public sealed class TodoModel
+{
+    public required Guid Id { get; set; }
+    public required string Title { get; set; }
+    public string? Description { get; set; }
+    public DateTime? DueDate { get; set; }
+    public required bool IsCompleted { get; set; }
+    public required DateTime CreatedAt { get; set; }
+    public DateTime? UpdatedAt { get; set; }
+}
